Correccion script java Usuario

--- a/index.html
+++ b/index.html
@@ -46,6 +46,6 @@
             </nav>
         </div>
     </footer>
-    <script src="js/simulador.js"></script>
+    <script src="js/simuladorUsuario.js"></script>
 </body>
 </html>
