Correccion script java Usuario

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
         <h2>El Artesanal</h2>
         <nav>
             <a href="index.html">El Artesanal</a>
-            <a href="menusindivduales.html">Menú Individual</a>
-            <a href="menuscorporativos.html">Menú Corporativo</a>
+            <a href="menus.html">Menús</a>
             <a href="extras.html">Otros Servicios</a>
             <a href="contact.html">Contacto</a>
         </nav>
@@ -37,10 +36,9 @@
     </main>
     <footer id="foot">
         <div>
-            <nav class="foot_nav">
+            <nav>
                 <a href="index.html">El Artesanal</a>
-                <a href="menusindivduales.html">Menú Individual</a>
-                <a href="menuscorporativos.html">Menú Corporativo</a>
+                <a href="menus.html">Menús</a>
                 <a href="extras.html">Otros Servicios</a>
                 <a href="contact.html">Contacto</a>
             </nav>
