--- a/extras.html
+++ b/extras.html
@@ -5,18 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Extras</title>
+    <!-- Bootstrap Css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- Mi Css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header id="head">
-        <h2>El Artesanal</h2>
-        <nav>
-            <a href="index.html">El Artesanal</a>
-            <a href="menus.html">Menús</a>
-            <a href="extras.html">Otros Servicios</a>
-            <a href="contact.html">Contacto</a>
-        </nav>
-    </header>
+  <header class="head row justify-content-center">
+    <a class="logo col-lg-2" href="index.html"><img src="images/logo.jpg" alt="Logo de El Artesanal"></a>
+    <h2 class="col-lg-3">El Artesanal</h2>
+    <nav class="navbar navbar-expand-lg navbar-dark col-lg-5">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="menus.html">Menús</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="extras.html">Otros Servicios</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
+</header>
     <main>
         <section class="title">
             <h1>El Artesanal, servicios extras</h1>
@@ -26,16 +42,31 @@
             <p>Aparte de los menús diarios individuales y corporativos, El Artesanal ofrece un abanico de opciones para eventos y reuniones, como lo son pizzas, sandwiches de miga, patas y catering salados, aparte de sus picadas famosas en Alberdi.</p>
         </section>
     </main>
-    <footer id="foot">
-        <div>
-            <nav>
-                <a href="index.html">El Artesanal</a>
-                <a href="menus.html">Menús</a>
-                <a href="extras.html">Otros Servicios</a>
-                <a href="contact.html">Contacto</a>
-            </nav>
-        </div>
-    </footer>
+    <footer class="foot row">
+      <nav class="navbar navbar-expand-lg navbar-dark col-lg-6">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="menus.html">Menús</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="extras.html">Otros Servicios</a>
+                </li>
+            </ul>
+          </div>
+        </nav>
+      <a class="col-lg-1 linkwa justify-content-center" href="https://api.whatsapp.com/send?phone=17862013838&text=Hola quiero info"><img src="images/404-whatsapp.png" alt=""></a>
+  </footer>
+    <!-- Script JS para bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <!-- Mi javascript -->
     <script src="js/simuladorPrecios.js"></script>
 </body>
 </html>
