--- a/index.html
+++ b/index.html
@@ -5,45 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Nosotros</title>
+     <!-- Bootstrap Css -->
+     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+     <!-- Mi Css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header id="head">
-        <h2>El Artesanal</h2>
-        <nav>
-            <a href="index.html">El Artesanal</a>
-            <a href="menus.html">Menús</a>
-            <a href="extras.html">Otros Servicios</a>
-            <a href="contact.html">Contacto</a>
-        </nav>
+    <header class="head row justify-content-center">
+        <a class="logo col-lg-2" href="index.html"><img src="images/logo.jpg" alt="Logo de El Artesanal"></a>
+        <h2 class="col-lg-3">El Artesanal</h2>
+        <nav class="navbar navbar-expand-lg navbar-dark col-lg-5">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="menus.html">Menús</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="extras.html">Otros Servicios</a>
+                  </li>
+              </ul>
+            </div>
+          </nav>
     </header>
-    <main>
-        <section class="title">
-            <h1>El Artesanal, comidas caseras</h1>
-        </section>
-        <section class="intro">
-            <h2>Nosotros</h2>
-            <p>Somos un emprendimiento familiar que nació del gusto por servir y cocinar, con una historia de cuidado por nuestros clientes que nos prefieren desde nuestros inicios hace ya varios años y gran pasión por crecer y seguir incorporando servicios. </p>
-        </section>
-        <section class="que">
-            <h2>¿Qué hacemos?</h2>
-            <p>El Artesanal, comenzó realizando sandwiches de miga y pizzas para comercializar en negocios pequeños, luego evolucionamos incluyendo caterings para eventos y menús. Nuestra última novedad, menús para empresas.</p>
-        </section>
-        <section class="donde">
-            <h2>¿Dónde estamos?</h2>
-            <p>El Artesanal, esta localizado en Alberdi a cuadras del centro, pero tiene gran zona de influencia y los extras planificados pueden ser solicitados de cualquier zona de la ciudad.</p>
-        </section>
-    </main>
-    <footer id="foot">
-        <div>
-            <nav>
-                <a href="index.html">El Artesanal</a>
-                <a href="menus.html">Menús</a>
-                <a href="extras.html">Otros Servicios</a>
-                <a href="contact.html">Contacto</a>
-            </nav>
-        </div>
+    <section class="title row">
+        <h1>El Artesanal, comidas caseras</h1>
+    </section>
+    <section class="intro row">
+        <h2 class="col-lg-5">Nosotros</h2>
+        <p class="col-lg-6">Somos un emprendimiento familiar que nació del gusto por servir y cocinar, con una historia de cuidado por nuestros clientes que nos prefieren desde nuestros inicios hace ya varios años y gran pasión por crecer y seguir incorporando servicios. </p>
+    </section>
+    <section class="que row">
+        <h2 class="col-lg-5">¿Qué hacemos?</h2>
+        <p class="col-lg-6">El Artesanal, comenzó realizando sandwiches de miga y pizzas para comercializar en negocios pequeños, luego evolucionamos incluyendo caterings para eventos y menús. Nuestra última novedad, menús para empresas.</p>
+    </section>
+    <section class="donde row">
+        <h2 class="col-lg-5">¿Dónde estamos?</h2>
+        <p class="col-lg-6">El Artesanal, esta localizado en Alberdi a cuadras del centro, pero tiene gran zona de influencia y los extras planificados pueden ser solicitados de cualquier zona de la ciudad.</p>
+    </section>
+    <footer class="foot row">
+        <nav class="navbar navbar-expand-lg navbar-dark col-lg-6">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                  <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="menus.html">Menús</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="extras.html">Otros Servicios</a>
+                  </li>
+              </ul>
+            </div>
+          </nav>
+        <a class="col-lg-1 linkwa justify-content-center" href="https://api.whatsapp.com/send?phone=17862013838&text=Hola quiero info"><img src="images/404-whatsapp.png" alt=""></a>
     </footer>
+    <!-- Script JS para bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <!-- Mi javascript -->
     <script src="js/simuladorUsuario.js"></script>
 </body>
 </html>
