--- a/menus.html
+++ b/menus.html
@@ -5,18 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menús</title>
+    <!-- Bootstrap Css -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+    <!-- Mi Css -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <header id="head">
-        <h2>El Artesanal</h2>
-        <nav>
-            <a href="index.html">El Artesanal</a>
-            <a href="menus.html">Menús</a>
-            <a href="extras.html">Otros Servicios</a>
-            <a href="contact.html">Contacto</a>
-        </nav>
-    </header>
+  <header class="head row justify-content-center">
+    <a class="logo col-lg-2" href="index.html"><img src="images/logo.jpg" alt="Logo de El Artesanal"></a>
+    <h2 class="col-lg-3">El Artesanal</h2>
+    <nav class="navbar navbar-expand-lg navbar-dark col-lg-5">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="menus.html">Menús</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="extras.html">Otros Servicios</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
+</header>
     <main>
         <section class="title">
             <h1>El Artesanal, Menús Corporativos</h1>
@@ -28,82 +44,96 @@
             <h2>Nuestras opciones de menú según el día de la semana</h2>
             <div>
                 <h3>Lunes</h3>
-                <h4>#1 - Menú tradicional</h4>
+                <h5>#1 - Menú tradicional</h5>
                 <p>Pata mulso al verdeo con puré mixto</p>
-                <h4>#2 - Menú light</h4>
+                <h5>#2 - Menú light</h5>
                 <p>Churrasquito con ensalada</p>
-                <h4>#3 - Menú vegetariano</h4>
+                <h5>#3 - Menú vegetariano</h5>
                 <p>Rissoto</p>
-                <h4>#4 - Opción Milanesa</h4>
+                <h5>#4 - Opción Milanesa</h5>
                 <p>Milanesa con ensalada</p>
-                <h4>#5 - Opción Suprema</h4>
+                <h5>#5 - Opción Suprema</h5>
                 <p>Suprema con ensalada</p>
             </div>
             <div>
                 <h3>Martes</h3>
-                <h4>#1 - Menú tradicional</h4>
+                <h5>#1 - Menú tradicional</h5>
                 <p>Pastel de papas</p>
-                <h4>#2 - Menú light</h4>
+                <h5>#2 - Menú light</h5>
                 <p>Tarta de atún con ensalada</p>
-                <h4>#3 - Menú vegetariano</h4>
+                <h5>#3 - Menú vegetariano</h5>
                 <p>Hamburguesas de arroz yamani y calabaza con ensalada</p>
-                <h4>#4 - Opción Milanesa</h4>
+                <h5>#4 - Opción Milanesa</h5>
                 <p>Milanesa con ensalada</p>
-                <h4>#5 - Opción Suprema</h4>
+                <h5>#5 - Opción Suprema</h5>
                 <p>Suprema con ensalada</p>
             </div>
             <div>
                 <h3>Miercoles</h3>
-                <h4>#1 - Menú tradicional</h4>
+                <h5>#1 - Menú tradicional</h5>
                 <p>Merluza a la romana con puré de papas</p>
-                <h4>#2 - Menú light</h4>
+                <h5>#2 - Menú light</h5>
                 <p>Wok de verduras y pollo salteadas en salsa de soja</p>
-                <h4>#3 - Menú vegetariano</h4>
+                <h5>#3 - Menú vegetariano</h5>
                 <p>Tarta de verduras con ensalada</p>
-                <h4>#4 - Opción Milanesa</h4>
+                <h5>#4 - Opción Milanesa</h5>
                 <p>Milanesa con ensalada</p>
-                <h4>#5 - Opción Suprema</h4>
+                <h5>#5 - Opción Suprema</h5>
                 <p>Suprema con ensalada</p>
             </div>
             <div>
                 <h3>Jueves</h3>
-                <h4>#1 - Menú tradicional</h4>
+                <h5>#1 - Menú tradicional</h5>
                 <p>Milanesa de ternera con arroz amarillo</p>
-                <h4>#2 - Menú light</h4>
+                <h5>#2 - Menú light</h5>
                 <p>Costeleta de cerdo con ensalada</p>
-                <h4>#3 - Menú vegetariano</h4>
+                <h5>#3 - Menú vegetariano</h5>
                 <p>Wrap de verduras</p>
-                <h4>#4 - Opción Milanesa</h4>
+                <h5>#4 - Opción Milanesa</h5>
                 <p>Milanesa con ensalada</p>
-                <h4>#5 - Opción Suprema</h4>
+                <h5>#5 - Opción Suprema</h5>
                 <p>Suprema con ensalada</p>
             </div>
             <div>
                 <h3>Viernes</h3>
-                <h4>#1 - Menú tradicional</h4>
+                <h5>#1 - Menú tradicional</h5>
                 <p>Bondiola de cerdo con pure mixto</p>
-                <h4>#2 - Menú light</h4>
+                <h5>#2 - Menú light</h5>
                 <p>Ensalada Cesar</p>
-                <h4>#3 - Menú vegetariano</h4>
+                <h5>#3 - Menú vegetariano</h5>
                 <p>Omellete relleno (cebolla caramlizadam, tomate y queso)</p>
-                <h4>#4 - Opción Milanesa</h4>
+                <h5>#4 - Opción Milanesa</h5>
                 <p>Milanesa con ensalada</p>
-                <h4>#5 - Opción Suprema</h4>
+                <h5>#5 - Opción Suprema</h5>
                 <p>Suprema con ensalada</p>
             </div>
         </section>
     </main>
-    <footer id="foot">
-        <hr>
-        <div>
-            <nav>
-                <a href="index.html">El Artesanal</a>
-                <a href="menus.html">Menús</a>
-                <a href="extras.html">Otros Servicios</a>
-                <a href="contact.html">Contacto</a>
-            </nav>
-        </div>
-    </footer>
+    <footer class="foot row">
+      <nav class="navbar navbar-expand-lg navbar-dark col-lg-6">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item active">
+                <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="menus.html">Menús</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="extras.html">Otros Servicios</a>
+                </li>
+            </ul>
+          </div>
+        </nav>
+      <a class="col-lg-1 linkwa justify-content-center" href="https://api.whatsapp.com/send?phone=17862013838&text=Hola quiero info"><img src="images/404-whatsapp.png" alt=""></a>
+  </footer>
+    <!-- Script JS para bootstrap -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <!-- Mi javascript -->
     <script src="js/simuladorMenu.js"></script>
 </body>
 </html>
