Primera Pre Entrega

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               </ul>
             </div>
           </nav>
-        <a class="col-lg-1 linkwa justify-content-center" href="https://api.whatsapp.com/send?phone=17862013838&text=Hola quiero info"><img src="images/404-whatsapp.png" alt=""></a>
+        <a class="col-lg-1 linkwa justify-content-center" href="https://api.whatsapp.com/send?phone=+5493517424704&text=Hola quiero conocer más sobre los servicios de El Artesanal"><img src="images/404-whatsapp.png" alt=""></a>
     </footer>
     <!-- Script JS para bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
