--- a/menus.html
+++ b/menus.html
@@ -41,7 +41,8 @@
             <h2>De qué se trata?</h2>
             <p>Podes seleccionar tu menú o la cantidad que quieras indicandonós los números de opción y la dirección, un telefóno y horario de entrega y nosotros confirmamos tu pedido por Whatsapp y listo, a disfrutar de la comida casera!</p>
             <p>Además, en esta sección e ingresando con el usuario de las empresas asociadas a El Artesanal, los encargados de cuenta podrán encargar los días miercoles, todos aquellos menús solicitados para la siguiente semana y la identificación de cada comenzal. Nosotros llevaremos todos los días a la hora solicitada los menús etiquetados para que puedan disfrutar su almuerzo.</p>
-            <h2>Nuestras opciones de menú según el día de la semana</h2>
+            <h2>Nuestras opciones de menú son según el día de la semana seguí al Carrito!</h2>
+            <!--  
             <div>
                 <h3>Lunes</h3>
                 <h5>#1 - Menú tradicional</h5>
@@ -107,7 +108,11 @@
                 <h5>#5 - Opción Suprema</h5>
                 <p>Suprema con ensalada</p>
             </div>
+            -->
         </section>
+        <div>
+          <a class="linkwa" href="carrito.html"><h4>Ir al Carrito!</h4></a>
+        </div>
     </main>
     <footer class="foot row">
       <nav class="navbar navbar-expand-lg navbar-dark col-lg-6">
