--- a/menus.html
+++ b/menus.html
@@ -13,7 +13,6 @@
 <body>
   <header class="head row justify-content-center">
     <a class="logo col-lg-2" href="index.html"><img src="images/logo.jpg" alt="Logo de El Artesanal"></a>
-    <h2 class="col-lg-3">El Artesanal</h2>
     <nav class="navbar navbar-expand-lg navbar-dark col-lg-5">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,113 +31,126 @@
           </ul>
         </div>
       </nav>
-</header>
-    <main>
-        <section class="title">
-            <h1>El Artesanal, Menús Corporativos</h1>
-        </section>
-        <section class="intro">
-            <h2>De qué se trata?</h2>
-            <p>Podes seleccionar tu menú o la cantidad que quieras indicandonós los números de opción y la dirección, un telefóno y horario de entrega y nosotros confirmamos tu pedido por Whatsapp y listo, a disfrutar de la comida casera!</p>
-            <p>Además, en esta sección e ingresando con el usuario de las empresas asociadas a El Artesanal, los encargados de cuenta podrán encargar los días miercoles, todos aquellos menús solicitados para la siguiente semana y la identificación de cada comenzal. Nosotros llevaremos todos los días a la hora solicitada los menús etiquetados para que puedan disfrutar su almuerzo.</p>
-            <h2>Nuestras opciones de menú son según el día de la semana seguí al Carrito!</h2>
-            <!--  
-            <div>
-                <h3>Lunes</h3>
-                <h5>#1 - Menú tradicional</h5>
-                <p>Pata mulso al verdeo con puré mixto</p>
-                <h5>#2 - Menú light</h5>
-                <p>Churrasquito con ensalada</p>
-                <h5>#3 - Menú vegetariano</h5>
-                <p>Rissoto</p>
-                <h5>#4 - Opción Milanesa</h5>
-                <p>Milanesa con ensalada</p>
-                <h5>#5 - Opción Suprema</h5>
-                <p>Suprema con ensalada</p>
-            </div>
-            <div>
-                <h3>Martes</h3>
-                <h5>#1 - Menú tradicional</h5>
-                <p>Pastel de papas</p>
-                <h5>#2 - Menú light</h5>
-                <p>Tarta de atún con ensalada</p>
-                <h5>#3 - Menú vegetariano</h5>
-                <p>Hamburguesas de arroz yamani y calabaza con ensalada</p>
-                <h5>#4 - Opción Milanesa</h5>
-                <p>Milanesa con ensalada</p>
-                <h5>#5 - Opción Suprema</h5>
-                <p>Suprema con ensalada</p>
-            </div>
-            <div>
-                <h3>Miercoles</h3>
-                <h5>#1 - Menú tradicional</h5>
-                <p>Merluza a la romana con puré de papas</p>
-                <h5>#2 - Menú light</h5>
-                <p>Wok de verduras y pollo salteadas en salsa de soja</p>
-                <h5>#3 - Menú vegetariano</h5>
-                <p>Tarta de verduras con ensalada</p>
-                <h5>#4 - Opción Milanesa</h5>
-                <p>Milanesa con ensalada</p>
-                <h5>#5 - Opción Suprema</h5>
-                <p>Suprema con ensalada</p>
-            </div>
-            <div>
-                <h3>Jueves</h3>
-                <h5>#1 - Menú tradicional</h5>
-                <p>Milanesa de ternera con arroz amarillo</p>
-                <h5>#2 - Menú light</h5>
-                <p>Costeleta de cerdo con ensalada</p>
-                <h5>#3 - Menú vegetariano</h5>
-                <p>Wrap de verduras</p>
-                <h5>#4 - Opción Milanesa</h5>
-                <p>Milanesa con ensalada</p>
-                <h5>#5 - Opción Suprema</h5>
-                <p>Suprema con ensalada</p>
-            </div>
-            <div>
-                <h3>Viernes</h3>
-                <h5>#1 - Menú tradicional</h5>
-                <p>Bondiola de cerdo con pure mixto</p>
-                <h5>#2 - Menú light</h5>
-                <p>Ensalada Cesar</p>
-                <h5>#3 - Menú vegetariano</h5>
-                <p>Omellete relleno (cebolla caramlizadam, tomate y queso)</p>
-                <h5>#4 - Opción Milanesa</h5>
-                <p>Milanesa con ensalada</p>
-                <h5>#5 - Opción Suprema</h5>
-                <p>Suprema con ensalada</p>
-            </div>
-            -->
-        </section>
-        <div>
-          <a class="linkwa" href="carrito.html"><h4>Ir al Carrito!</h4></a>
-        </div>
-    </main>
-    <footer class="foot row">
-      <nav class="navbar navbar-expand-lg navbar-dark col-lg-6">
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-              <li class="nav-item active">
-                <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="menus.html">Menús</a>
-              </li>
-              <li class="nav-item">
-                  <a class="nav-link" href="extras.html">Otros Servicios</a>
-                </li>
-            </ul>
+  </header>
+  <main class="container">
+      <section class="title row">
+          <h1>El Artesanal, Menús Corporativos</h1>
+      </section>
+      <section class="intro row">
+        <h2>De qué se trata?</h2>
+        <p>Podes seleccionar tu menú o la cantidad que quieras indicandonós los números de opción y la dirección, un telefóno y horario de entrega y nosotros confirmamos tu pedido por Whatsapp y listo, a disfrutar de la comida casera!</p>
+        <p>Además, en esta sección e ingresando con el usuario de las empresas asociadas a El Artesanal, los encargados de cuenta podrán encargar los días miercoles, todos aquellos menús solicitados para la siguiente semana y la identificación de cada comenzal. Nosotros llevaremos todos los días a la hora solicitada los menús etiquetados para que puedan disfrutar su almuerzo.</p>
+        <h2>Nuestras opciones de menú son según el día de la semana probalas!</h2> 
+      </section>
+      <div class="row">
+        <div class="card col-lg-2 mx-2">
+          <div class="card-body">
+            <h5 class="card-title">Lunes</h5>
+            <h6 class="card-subtitle mb-2 text-muted">#1 - Menú tradicional</h6>
+            <p class="card-text">Pata mulso al verdeo con puré mixto</p>
+            <h6 class="card-subtitle mb-2 text-muted">#2 - Menú light</h6>
+            <p class="card-text">Churrasquito con ensalada</p>
+            <h6 class="card-subtitle mb-2 text-muted">#3 - Menú vegetariano</h6>
+            <p class="card-text">Rissoto</p>
+            <h6 class="card-subtitle mb-2 text-muted">#4 - Opción Milanesa</h6>
+            <p class="card-text">Milanesa con ensalada</p>
+            <h6 class="card-subtitle mb-2 text-muted">#5 - Opción Suprema</h6>
+            <p class="card-text">Suprema con ensalada</p>
+            <a href="carrito.html" class="card-link">Carrito</a>
           </div>
-        </nav>
+        </div>
+        <div class="card col-lg-2 mx-2">
+          <div class="card-body">
+            <h5 class="card-title">Martes</h5>
+            <h6 class="card-subtitle mb-2 text-muted">#1 - Menú tradicional</h6>
+            <p class="card-text">Pastel de papas</p>
+            <h6 class="card-subtitle mb-2 text-muted">#2 - Menú light</h6>
+            <p class="card-text">Tarta de atún con ensalada</p>
+            <h6 class="card-subtitle mb-2 text-muted">#3 - Menú vegetariano</h6>
+            <p class="card-text">Hamburguesas de arroz yamani y calabaza con ensalada</p>
+            <h6 class="card-subtitle mb-2 text-muted">#4 - Opción Milanesa</h6>
+            <p class="card-text">Milanesa con ensalada</p>
+            <h6 class="card-subtitle mb-2 text-muted">#5 - Opción Suprema</h6>
+            <p class="card-text">Suprema con ensalada</p>
+            <a href="carrito.html" class="card-link">Carrito</a>
+          </div>
+        </div>
+        <div class="card col-lg-2 mx-2">
+          <div class="card-body">
+            <h5 class="card-title">Miercoles</h5>
+            <h6 class="card-subtitle mb-2 text-muted">#1 - Menú tradicional</h6>
+            <p class="card-text">Merluza a la romana con puré de papas</p>
+            <h6 class="card-subtitle mb-2 text-muted">#2 - Menú light</h6>
+            <p class="card-text">Wok de verduras y pollo salteadas en salsa de soja</p>
+            <h6 class="card-subtitle mb-2 text-muted">#3 - Menú vegetariano</h6>
+            <p class="card-text">Tarta de verduras con ensalada</p>
+            <h6 class="card-subtitle mb-2 text-muted">#4 - Opción Milanesa</h6>
+            <p class="card-text">Milanesa con ensalada</p>
+            <h6 class="card-subtitle mb-2 text-muted">#5 - Opción Suprema</h6>
+            <p class="card-text">Suprema con ensalada</p>
+            <a href="carrito.html" class="card-link">Carrito</a>
+          </div>
+        </div>
+        <div class="card col-lg-2 mx-2">
+          <div class="card-body">
+            <h5 class="card-title">Jueves</h5>
+            <h6 class="card-subtitle mb-2 text-muted">#1 - Menú tradicional</h6>
+            <p class="card-text">Milanesa de ternera con arroz amarillo</p>
+            <h6 class="card-subtitle mb-2 text-muted">#2 - Menú light</h6>
+            <p class="card-text">Costeleta de cerdo con ensalada</p>
+            <h6 class="card-subtitle mb-2 text-muted">#3 - Menú vegetariano</h6>
+            <p class="card-text">Wrap de verduras</p>
+            <h6 class="card-subtitle mb-2 text-muted">#4 - Opción Milanesa</h6>
+            <p class="card-text">Milanesa con ensalada</p>
+            <h6 class="card-subtitle mb-2 text-muted">#5 - Opción Suprema</h6>
+            <p class="card-text">Suprema con ensalada</p>
+            <a href="carrito.html" class="card-link">Carrito</a>
+          </div>
+        </div>
+        <div class="card col-lg-2 mx-2">
+          <div class="card-body">
+            <h5 class="card-title">Viernes</h5>
+            <h6 class="card-subtitle mb-2 text-muted">#1 - Menú tradicional</h6>
+            <p class="card-text">Bondiola de cerdo con pure mixto</p>
+            <h6 class="card-subtitle mb-2 text-muted">#2 - Menú light</h6>
+            <p class="card-text">Ensalada Cesar</p>
+            <h6 class="card-subtitle mb-2 text-muted">#3 - Menú vegetariano</h6>
+            <p class="card-text">Omellete relleno (cebolla caramlizadam, tomate y queso)</p>
+            <h6 class="card-subtitle mb-2 text-muted">#4 - Opción Milanesa</h6>
+            <p class="card-text">Milanesa con ensalada</p>
+            <h6 class="card-subtitle mb-2 text-muted">#5 - Opción Suprema</h6>
+            <p class="card-text">Suprema con ensalada</p>
+            <a href="carrito.html" class="card-link">Carrito</a>
+          </div>
+        </div>
+      </div>
+      <div>
+        <a class="btncarrito" href="carrito.html">Ir al Carrito!</a>
+      </div>
+  </main>
+  <footer class="foot row">
+    <nav class="navbar navbar-expand-lg navbar-dark col-lg-6">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">Inicio<span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="menus.html">Menús</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="extras.html">Otros Servicios</a>
+              </li>
+          </ul>
+        </div>
+      </nav>
       <a class="col-lg-1 linkwa justify-content-center" href="https://api.whatsapp.com/send?phone=17862013838&text=Hola quiero info"><img src="images/404-whatsapp.png" alt=""></a>
   </footer>
     <!-- Script JS para bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
-    <!-- Mi javascript -->
-    <script src="js/simuladorMenu.js"></script>
 </body>
 </html>
