--- a/extras.html
+++ b/extras.html
@@ -40,6 +40,13 @@
             <h2>Otros servicios</h2>
             <p>Aparte de los menús diarios individuales y corporativos, El Artesanal ofrece un abanico de opciones para eventos y reuniones, como lo son pizzas, sandwiches de miga, patas y catering salados, aparte de sus picadas famosas en Alberdi.</p>
         </section>
+        <select name="Extras" id="seleccionarOpcion">
+          <option value="pizzaClasica">Pizza Clasica</option>
+          <option value="pizzaEspecial">Pizza Especial</option>
+          <option value="pataFlambeada">Pata Flambeada</option>
+          <option value="picadaCervecera">Picada Cervecera</option>
+          <option value="cateringSalado">Catering Salado</option>
+        </select>
     </main>
     <footer class="foot row">
       <nav class="navbar navbar-expand-lg navbar-dark col-lg-6">
@@ -65,5 +72,7 @@
     <!-- Script JS para bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
+    <!-- My Script -->
+    <script src="/js/extras.js"></script>
 </body>
 </html>
