--- a/menus.html
+++ b/menus.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menús</title>
+    <!-- Toastify -->
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
     <!-- Bootstrap Css -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
     <!-- Mi Css -->
@@ -42,22 +44,22 @@
         <h2>Nuestras opciones de menú son según el día de la semana probalas!</h2> 
       </section>
       <div id="cardsLunes" class="row">
-        <div class="card col-lg-3 card-body">
-          <img src="images/zanahoria.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/polloAlVerdero.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Lunes - Tradicional</h5>
           <p class="card-text">Pata mulso al verdeo con puré mixto</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/zanahoria.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/churrasquito.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Lunes - Light</h5>
           <p class="card-text">Churrasquito con ensalada</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/zanahoria.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/rissoto.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Lunes - Vegetariano</h5>
           <p class="card-text">Rissoto</p>
           <h6 class="card-price"> $300 </h6>
@@ -65,22 +67,22 @@
         </div>
       </div>
       <div id="cardsMartes" class="row">
-        <div class="card col-lg-3 card-body">
-          <img src="images/arroz.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/pastelPap.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Martes - Tradicional</h5>
           <p class="card-text">Pastel de papas</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/arroz.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/tartaAtun.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Martes - Light</h5>
           <p class="card-text">Tarta de atún con ensalada</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/arroz.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/hamburs.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Martes - Vegetariano</h5>
           <p class="card-text">Hamburguesas de arroz yamani y calabaza con ensalada</p>
           <h6 class="card-price"> $300 </h6>
@@ -88,22 +90,22 @@
         </div>
       </div>
       <div id="cardsMiercoles" class="row">
-        <div class="card col-lg-3 card-body">
-          <img src="images/carne.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/merluRomana.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Miercoles - Tradicional</h5>
           <p class="card-text">Merluza a la romana con puré de papas</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/carne.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/wokVegetyPollo.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Miercoles - Light</h5>
           <p class="card-text">Wok de verduras y pollo salteadas en salsa de soja</p>
           <h6 class="card-title"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/carne.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/tartaVerdu.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Miercoles - Vegetariano</h5>
           <p class="card-text">Tarta de verduras con ensalada</p>
           <h6 class="card-title"> $300 </h6>
@@ -111,22 +113,22 @@
         </div>
       </div>
       <div id="cardsJueves" class="row">
-        <div class="card col-lg-3 card-body">
-          <img src="images/cebolla.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/milaArroz.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Jueves - Tradicional</h5>
           <p class="card-text">Milanesa de ternera con arroz amarillo</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/cebolla.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/costeletaCerdo.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Jueves - Light</h5>
           <p class="card-text">Costeleta de cerdo con ensalada</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/cebolla.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/wraps.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Jueves - Vegetariano</h5>
           <p class="card-text">Wrap de verduras</p>
           <h6 class="card-price"> $300 </h6>
@@ -134,22 +136,22 @@
         </div>
       </div>
       <div id="cardsViernes" class="row">
-        <div class="card col-lg-3 card-body">
-          <img src="images/hierbas.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/bondiola.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Viernes - Tradicional</h5>
           <p class="card-text">Bondiola de cerdo con pure mixto</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/hierbas.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/cesar.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Viernes - Light</h5>
           <p class="card-text">Ensalada Cesar</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/hierbas.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/omelete.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Viernes - Vegetariano</h5>
           <p class="card-text">Omellete relleno (cebolla caramlizadam, tomate y queso)"</p>
           <h6 class="card-price"> $300 </h6>
@@ -157,23 +159,26 @@
         </div>
       </div>
       <div id="cardsTodos" class="row">
-        <div class="card col-lg-3 card-body">
-          <img src="images/hierbas.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/mila.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Todos los días - Opción Mila</h5>
-          <p class="card-text">Milanesa con ensalada</p>
+          <p class="card-text">Milanesa con guarnición</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
-        <div class="card col-lg-3 card-body">
-          <img src="images/hierbas.jpg" class="card-img-top img-thumbnail" alt="foto del menu">
+        <div class="card col-lg-3 card-body mx-2">
+          <img src="images/suprema.jpeg" class="card-img-top img-thumbnail" alt="foto del menu">
           <h5 class="card-title">Todos los días - Opción Suprema</h5>
-          <p class="card-text">Suprema con ensalada</p>
+          <p class="card-text">Suprema con guarnición</p>
           <h6 class="card-price"> $300 </h6>
           <button class="agregarMenu btn btn-primary"><img src="images/059-cart.png"></button>
         </div>
       </div>
       <section id="carrito" class="carrito row">
-        <h2 class="titulo-carrito">Tu carrito!</h2><br>
+        <h2 class="titulo-carrito">Tu carrito!</h2>
+        <br>
+        <br>
+        <br>
 
       </section>
       <section class="total-carro row">
@@ -201,6 +206,8 @@
       </nav>
       <a class="col-lg-1 linkwa justify-content-center" href="https://api.whatsapp.com/send?phone=17862013838&text=Hola quiero info"><img src="images/404-whatsapp.png" alt=""></a>
   </footer>
+    <!-- Toastify -->
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <!-- Script JS para bootstrap -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
