--- a/extras.html
+++ b/extras.html
@@ -12,8 +12,8 @@
 </head>
 <body>
   <header class="head row justify-content-center">
-    <a class="logo col-lg-2" href="index.html"><img src="images/logo.jpg" alt="Logo de El Artesanal"></a>
-    <nav class="navbar navbar-expand-lg navbar-dark col-lg-5">
+    <a class="logo col-lg-2" href="index.html"><img class="img-thumbnail" src="images/logo.jpeg" alt="Logo de El Artesanal"></a>
+    <nav class="navbar navbar-expand-lg navbar-dark col-lg-10 align-items-right">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -27,40 +27,41 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="extras.html">Otros Servicios</a>
-              </li>
+            </li>
           </ul>
         </div>
       </nav>
-</header>
+  </header>
     <main class="container">
         <section class="title">
             <h1>El Artesanal, servicios extras</h1>
         </section>
         <section class="intro">
             <h2>Otros servicios</h2>
-            <p>Aparte de los menús diarios individuales y corporativos, El Artesanal ofrece un abanico de opciones para eventos y reuniones, como lo son pizzas, sandwiches de miga, patas y catering salados, aparte de sus picadas famosas en Alberdi.</p>
+            <p>El Artesanal ofrece un abanico de opciones para eventos y reuniones, como lo son pizzas, picadas, patas y catering salados, aparte de sus menues famosos en Alberdi.</p>
         </section>
         <input id="eleccion" type="text" class="input" placeholder="Que estas buscando?">
         <button id="btncart"><img src="images/059-cart.png"><span id="numerito">0</span></button>
         <br>
-        <select name="extras" id="seleccionarOpcion">
+        <select class="d-flex " name="extras" id="seleccionarOpcion">
           <option value="Todos"></option>
-          <option value="Pizza Clasica">Pizza Clasica</option>
-          <option value="Pizza Especial">Pizza Especial</option>
-          <option value="Pata Flambeada">Pata Flambeada</option>
-          <option value="Picada Cervecera">Picada Cervecera</option>
-          <option value="Catering Salado">Catering Salado</option>
+          <option value="Pizza">Pizza</option>
+          <option value="Pata">Pata Flambeada</option>
+          <option value="Picada">Picada Cervecera</option>
+          <option value="Catering">Catering Salado</option>
         </select>
         <section id="extrasCards" class="row">
           <!-- Aca iran las cards -->
         </section>
-        <div class="carrito row">
-            <h3 class="col-3">Carrito</h3>
-            <div class="col-5" id="carroExtras">
-                <!-- Aca iran los productos -->
-            </div>
-        </div>
-        <h5 class="precioProducto row">Precio total: $<span id="total-extras">0</span></h5>
+        <div class="contenedor-carro">
+          <div class="carrito row">
+              <h3 class="col-12">Carrito de Extras:</h3>
+              <div class="d-flex" id="carroExtras">
+                  <!-- Aca iran los productos -->
+              </div>
+          </div>
+          <h5 class="precioProducto row">Precio total: $<span id="total-extras">0</span></h5>
+      </div>
     </main>
     <footer class="foot row">
       <nav class="navbar navbar-expand-lg navbar-dark col-lg-6">
@@ -81,8 +82,8 @@
             </ul>
           </div>
         </nav>
-      <a class="col-lg-1 linkwa justify-content-center" href="https://api.whatsapp.com/send?phone=17862013838&text=Hola quiero info"><img src="images/404-whatsapp.png" alt=""></a>
-  </footer>
+      <a class="col-lg-6 linkwa d-flex justify-content-between" href="https://api.whatsapp.com/send?phone=+5493517424704&text=Hola quiero conocer más sobre los servicios de El Artesanal"><p class="linktxt">Por cualquier consulta o sugerencia escribinos!</p><img src="images/404-whatsapp.png" alt=""></a>
+    </footer>
     <!-- Script JS para bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-fQybjgWLrvvRgtW6bFlB7jaZrFsaBXjsOMm/tB9LTS58ONXgqbR9W8oWht/amnpF" crossorigin="anonymous"></script>
